Revision history for Perl extension {{$dist->name}}

{{$NEXT}}
    - fix pod error (thanks haarg!)

2.09      2014-08-23 08:40:01Z
    - sort the arguments to kwalitee_ok, for smaller diffs between iterations
    - now again running the generated test during tests, but without
      attempting to capture its output cleverly

2.08      2014-08-16 04:56:06Z
    - line numbers in shipped code are now almost the same (within 3) as
      the repository source, for easier debugging
    - use kwalitee_ok() interface newly added in Test::Kwalitee 1.21

2.07      2013-10-15 02:18:02Z
    - include in the generated test the exact version of the plugin that
      generated the test
    - warnings tests bypassed during installation
    - update minimum required version of Test::Kwalitee

2.06      2013-08-16 19:41:24 UTC-0700
    - removed old and deprecated Dist::Zilla::Plugin::KwaliteeTests, which is
      no longer indexed by PAUSE anyway
    - fixed tests broken on win32
    - Test::Kwalitee is now required to be present when the test is run (by
      authors, at release time)
    - cleaned up prerequisite list

2.05      2013-08-11 14:18:58 UTC-0700
    - adjust tests to handle recent changes to Test::Kwalitee and
      Module::CPANTS::Analyse

2.04      2013-07-25 17:29:10 UTC-0700
    - fix installation failures with Test::Kwalitee 1.09 (issue #4,
      harleypig's repo)

2.03      2011-10-19 08:56:47 UTC-0600

2.020000  2011-09-07 20:47:05 UTC-0600
    - Provide a deprecation warning (Mike Doherty)
    - Moved switch_namespace branch to master ( HarleyPig )
    - brought dist.ini up to date ( HarleyPig )

1.112410  2011-08-29 09:57:31 UTC-0600
    - Made pod coverage test pass ( HarleyPig )
    - Fixed error with tests needing 'plan' defined ( Kent Fredric)
    - Replace 2-phase inject/munge with 1-phase inject ( Kent Fredric )
    - Add some tests for our test being run ( Kent Fredric )

1.112400  2011-08-28 09:34:37 UTC-0600

1.112390  2011-08-26 21:11:01 UTC-0600
